# op_bench

./: .gitignore  CMakeLists.txt  README.md  build.sh  requirements.txt  run_comparator.py  run_network_tests.py  run_profile.sh  setup.py
docs/: FP8_LINEAR_OPERATOR.md  FRAMEWORK_GUIDE.md
scripts/: build.sh  cleanup.sh  run_ncu_profiling.sh  run_profiling.sh
src/: __init__.py  linear.py
src/cuda/: __init__.py  matmul_cuda_ext.cpp  matmul_kernels.cu  matmul_kernels.h
src/framework/: __init__.py  operator_framework.py
src/operators/: __init__.py  fp8_linear_operator.py  matmul_operator.py  network_stress_operator.py  pcie_bandwidth_operator.py  rdma_bandwidth_operator.py  rdma_stress_operator.py  relu_operator.py  rmsnorm_operator.py  tcp_bandwidth_operator.py  vector_add_operator.py
tests/: ncu_profiler.py  profile_nsight.py  profiling_alternative.py  test_extension.py  test_fp8_linear_operator.py  test_rdma_operator.py
tools/: README.md  __init__.py  debug_imports.py  ncu_profiler.py  operator_comparator_tool.py  profile_nsight.py  profiling_pytorch.py
